fixing nav alignment issue in internet explorer

--- a/app/assets/sass/main/layout.sass
+++ b/app/assets/sass/main/layout.sass
@@ -48,7 +48,7 @@ body.scrolled .background
 		overflow: hidden
 		margin: 0
 		padding: 0
-		font-size: 0
+		height: 27px
 		li
 			text-transform: uppercase
 			+font("md")
